# serde_de_chain

./: Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs
tests/: integration.rs
