[package]
name = "serde_de_chain"
version = "0.2.0"
authors = ["Clifford T. Matthews <clifford.t.matthews@gmail.com>"]
description = """
A derive macro that lets a struct or enum be deserialized normally or, on
failure, from a previous representation. Previous representations can be
chained indefinitely. Chaining representations may be easier to maintain
than having a single untagged enum that encompasses multiple representations.
"""
edition = "2024"
keywords = ["serde", "legacy", "backward", "compatibility", "derive"]
categories = ["encoding", "parsing", "rust-patterns"]
repository = "https://github.com/ctm/serde_de_chain"
license = "Unlicense OR MIT"
readme = "README.md"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
serde = { version = "1.0.228", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0.150", default-features = false, features = ["alloc"] }
